# genaudit

./: README.md  pyproject.toml
genaudit/: __init__.py  get_example.py  launch.py  qa_models.py
genaudit/examples/saved/: Ex1_discharge_summary.json  Ex2_clinical_transcript.json
genaudit/factcheckers/: __init__.py  base.py  hf_predictor.py  utils.py
genaudit/webroot/: example.js  index.html  style.css
genaudit/webroot/resource_files/: angular-animate-1.6.1.min.js  angular-sanitize-1.6.1.js  codemirror.css  dialog.css  docs.css  matchesonscrollbar.css  search.js  show-hint.css
